# SplitGuides

./: .coveragerc  .gitignore  MANIFEST.in  app.py  pyproject.toml  readme.md  setup.py
.github/: dependabot.yml
.github/workflows/: auto-test.yml  auto_test.yml  build-exe.yml  build-wheel.yml  build-zipapp.yml  publish_to_pypi.yml  test-builds.yml
application/: app.py  app_server.py  setup.py
dependencies/: prefab_classes-0.6.0a5-py3-none-any.whl  prefab_classes-0.7.0-py3-none-any.whl
scripts/: clean_compiled_ui_files.py
splitnotes2/: note_handler.py  note_parser.py  util.py
splitnotes2/livesplit_client/: __init__.py  messaging.py  model.py  networking.py
splitnotes2/tests/: test_parser.py
splitnotes2/ui/: main.pyproject  main_window.py
splitnotes2/ui/layouts/: __init__.py  main_window.ui
splitnotes2/ui/source/: build_ui.py  main_window.ui  settings.ui
src/splitguides/: __main__.py  build_ui.py  exceptions.py  hotkeys.py  livesplit_client.py  livesplitone_client.py  note_parser.py  settings.py
src/splitguides/hotkeys/: __init__.py  keyboard_fixer.py
src/splitguides/livesplit_client/: __init__.py  messaging.py  networking.py
src/splitguides/server/: __init__.py  __main__.py  split_server.py
src/splitguides/settings/: __init__.py  settings.py
src/splitguides/templates/: desktop.html  server.html
src/splitguides/ui/: color.py  hotkey_manager.py  main.pyproject  main_window.py  server_settings_ui.py  settings_ui.py
src/splitguides/ui/custom_elements/: __init__.py  webenginepage.py
src/splitguides/ui/layouts/: __init__.py  build_ui.py  main_window.ui  server_settings.ui  settings.ui
src/splitguides/util/: prefab.py
src/splitnotes2/: note_parser.py  settings.py
src/splitnotes2/hotkeys/: keyboard_fixer.py
src/splitnotes2/livesplit_client/: __init__.py  messaging.py  networking.py
src/splitnotes2/server/: __init__.py  split_server.py
src/splitnotes2/server/static/: default.css  streamlistener.js
src/splitnotes2/server/templates/: index.html
src/splitnotes2/static/: server.css
src/splitnotes2/templates/: default.html
src/splitnotes2/ui/: hotkey_manager.py  main.pyproject  main_window.py  settings.py  settings_ui.py
src/splitnotes2/ui/custom_elements/: __init__.py
src/splitnotes2/ui/html/: default.css  default.html
src/splitnotes2/ui/layouts/: __init__.py  build_ui.py  main_window.ui  settings.ui
tests/: conftest.py  test_parser.py
tests/test_livesplit_client/: test_get_client.py  test_messaging.py  test_networking.py
tests/test_ui/: settings.json  test_main_window.py  test_settings.py
tests/test_util/: test_prefab.py
zipapp/: build_zipapps.py  rebuild_zipapp_lockfile.py  splitguides_desktop.py  splitguides_server.py
