[build-system]
requires = [
    "setuptools>=77.0",
    "pyside6-essentials~=6.9",  # Needed to build uic files
]
build-backend = "setuptools.build_meta"

[project]
name="splitguides"
description="Speedrun notes tool for advancing notes automatically with Livesplit."
authors = [
  { name = "David C Ellis" },
]
readme="README.md"
requires-python = ">=3.12"  # 3.12 should function and build now
dependencies = [
    "pyside6~=6.9",
    "jinja2~=3.1",
    "bleach[css]==6.0",  # Each upgrade to bleach has broken something so pin it.
    "flask~=3.0",
    "markdown~=3.6",
    "keyboard~=0.13.5",
    "ducktools-classbuilder>=0.7.4",
    "waitress~=3.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",  # Should also work on Linux, even if livesplit doesn't
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]
dynamic = ['version']
license = "GPL-3.0-or-later"

[project.scripts]
# For debugging reasons splitguides is not a gui-script
splitguides = "splitguides.__main__:main"
splitguides-server = "splitguides.server.__main__:launch"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-cov>=6.1",
    "pytest-qt>=4.4",
]
build = [
    "cx-freeze>=8.3",
    "pywin32>=308; sys_platform == 'win32'",
]

[tool.setuptools.dynamic]
version = { attr = "splitguides.__version__" }

[tool.pytest.ini_options]
addopts= "--cov=src/ --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.uv]
# Only x86_64 / AMD64 is supported
environments = [
    "platform_system == 'Windows' and platform_machine == 'AMD64' and implementation_name == 'cpython'",
    "platform_system == 'Linux' and platform_machine == 'x86_64' and implementation_name == 'cpython'",
]
