[build-system]
requires = [
    "setuptools>=77.0",
    "setuptools-scm>=8",
    "pyside6-essentials~=6.9", # Needed to build uic files
]
build-backend = "setuptools.build_meta"

[project]
name = "splitguides"
description = "A tool for speedrunners to display notes that advance automatically with their splits in Livesplit."
authors = [
    { name = "David C Ellis" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6~=6.9.0",
    "jinja2~=3.1",
    "bleach[css]==6.0",              # Each upgrade to bleach has broken something so pin it.
    "flask~=3.0",
    "markdown~=3.6",
    "keyboard~=0.13.5",
    "ducktools-classbuilder>=0.7.4",
    "waitress~=3.0",
    "platformdirs~=4.3",
    "websockets>=15.0.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
dynamic = ['version']
license = "GPL-3.0-or-later"

[project.scripts]
# For debugging reasons splitguides is not a gui-script
splitguides = "splitguides.__main__:main"
splitguides-server = "splitguides.server.__main__:launch"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-cov>=6.1",
    "pytest-qt>=4.4",
]
build = [
    "cx-freeze>=8.3",
    "pywin32>=308; sys_platform == 'win32'",
]

[tool.setuptools_scm]
version_file = "src/splitguides/_version.py"
version_file_template = """
__version__ = "{version}"
__version_tuple__ = {version_tuple}
"""

[tool.pytest.ini_options]
addopts = "--cov=src/ --cov-report=term-missing"
testpaths = [
    "tests",
]
